4356 - "displaying and modifying permissions within the chat" layout, layout bugs fixes/new features

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -129,6 +129,53 @@
 	-khtml-opacity: 0;
 	opacity: 0;
 }
+.icon-dropdown {
+	padding: 2px 13px 2px 3px;
+	float: right;
+	text-align: left;
+    -moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+    position:relative;
+    cursor: pointer;
+}
+.button.icon-dropdown.disabled > i {
+    cursor: default;
+}
+.icon-dropdown.disabled {
+    cursor: default;
+     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
+	-moz-opacity: 0.6;
+	-khtml-opacity: 0.6;
+	opacity: 0.6;
+}
+.icon-dropdown:not(.disabled):hover, .icon-dropdown.active {
+    background-image: url(../images/mega/new-chat-sprite-v3.svg);
+    background-repeat: no-repeat;
+    background-position: -64px -657px;
+}
+.icon-dropdown:not(.disabled).active {
+    background-position: -64px -699px;
+}
+.icon-dropdown:not(.disabled):hover::before, .icon-dropdown:not(.disabled):hover::after, .icon-dropdown.active::before, .icon-dropdown.active::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    left:0;
+    top:0;
+    -moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+    -webkit-box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.05);
+	-moz-box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.05);
+	box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.05);
+}
+.icon-dropdown:not(.disabled):hover::before, .icon-dropdown.active::before {
+    -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.15);
+	-moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.15);
+	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.15);
+}
 .default-white-button.tiny-button::after {
     content: '';
     display:block;
